--- a/src/html/ear.html
+++ b/src/html/ear.html
@@ -7,9 +7,9 @@
     <title>Ear Page</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../ENT-Clinic/Temp/header.css">
-    <link rel="stylesheet" href="../ENT-Clinic/Temp/navbar.css">
-    <link rel="stylesheet" href="../ENT-Clinic/src/footer/footer.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../CSS/services.css">
    
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -59,7 +59,7 @@
 
                           <!-- Navbar brand/logo (if needed) -->
                           <a class="navbar-brand" href="home.html">
-                              <img src="../ENT-Clinic/Temp/img1/logo.svg" alt="" width="70" height="65"
+                              <img src="../img/logo.svg" alt="" width="70" height="65"
                                   class="d-inline-block align-text-top">
 
                           </a>
@@ -84,7 +84,7 @@
 
 </div>
 <div class="container">
-    <img src="../Images/ear_photo.webp" class="img-fluid" alt="...">
+    <img src="../img/ear_photo.webp" class="img-fluid" alt="...">
 </div>
 
 <!-- services ear page -->
@@ -198,7 +198,7 @@
               <div class="col-xl-4 col-lg-4 mb-50">
                   <div class="footer-widget">
                       <div class="footer-logo">
-                          <a href="home.html"><img src="../ENT-Clinic/src/footer/img/logo.svg" class="img-fluid" alt="logo"></a>
+                          <a href="home.html"><img src="../img/logo.svg" class="img-fluid" alt="logo"></a>
                       </div>
                       <div class="footer-text">
                           <p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit, sed do eiusmod tempor
