--- a/src/html/app.html
+++ b/src/html/app.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Appointment Form</title>
-<link rel="stylesheet" href="../Temp/header.css">
-<link rel="stylesheet" href="../Temp/navbar.css">
-<link rel="stylesheet" href="../footer/footer.css">
+<link rel="stylesheet" href="../css/header.css">
+<link rel="stylesheet" href="../css/navbar.css">
+<link rel="stylesheet" href="../css/footer.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <style>
@@ -134,7 +134,7 @@ object-fit: fill;
 
                         <!-- Navbar brand/logo (if needed) -->
                         <a class="navbar-brand" href="home.html">
-                            <img src="../Temp/img1/logo.svg" alt="" width="70" height="65"
+                            <img src="../images/logo.svg" alt="" width="70" height="65"
                                 class="d-inline-block align-text-top">
 
                         </a>
@@ -157,7 +157,7 @@ object-fit: fill;
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
     <div class="container-1">
-        <img src="../appointement/images/header-page.jpg" alt="Snow" style="width: 100%; height: auto;;">
+        <img src="../images/header-page.jpg" alt="Snow" style="width: 100%; height: auto;;">
 
         <div class="centered">  Make Appointments </div>
         <div class="centered-1">Xcare => Make Appointements</div>
@@ -238,7 +238,7 @@ object-fit: fill;
                 <div class="col-xl-4 col-lg-4 mb-50">
                     <div class="footer-widget">
                         <div class="footer-logo">
-                            <a href="home.html"><img src="../footer/img/logo.svg" class="img-fluid" alt="logo"></a>
+                            <a href="home.html"><img src="../images/logo.svg" class="img-fluid" alt="logo"></a>
                         </div>
                         <div class="footer-text">
                             <p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit, sed do eiusmod tempor
