--- a/HTML/home.html
+++ b/HTML/home.html
@@ -10,17 +10,22 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
 
 
 
-    <link rel="stylesheet" href="./CSS/card.css">
-    <link rel="stylesheet" href="./CSS/carousel.css">
-    <link rel="stylesheet" href="./CSS/headStyles.css">
-    <link rel="stylesheet" href="./CSS/Navbar.css">
-    <link rel="stylesheet" href="./CSS/ourServices.css">
-    <link rel="stylesheet" href="./CSS/flipcard.css">
-    <link rel="stylesheet" href="./CSS/footer.css">
 
+
+
+    <link rel="stylesheet" href="../CSS/card.css">
+    <link rel="stylesheet" href="../CSS/carousel.css">
+    <link rel="stylesheet" href="../CSS/headStyles.css">
+    <link rel="stylesheet" href="../CSS/Navbar.css">
+    <link rel="stylesheet" href="../CSS/ourServices.css">
+    <link rel="stylesheet" href="../CSS/flipcard.css">
+    <link rel="stylesheet" href="../CSS/footer.css">
+    <link rel="stylesheet" href="../CSS/appointment.css">
+    <link rel="stylesheet" href="../CSS/happyclients.css">
 
 
 
@@ -41,7 +46,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                    <a class="nav-link active" aria-current="page" href="home.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">About Us</a>
@@ -52,7 +57,7 @@
                                         Services
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <li><a class="dropdown-item" href="#">Ear</a></li>
+                                        <li><a class="dropdown-item" href="./ear.html">Ear</a></li>
                                         <li><a class="dropdown-item" href="#">Nose</a></li>
                                         <li><a class="dropdown-item" href="#">Throat</a></li>
                                         <li>
@@ -76,13 +81,14 @@
                             </form> -->
                             <!-- Navbar brand/logo (if needed) -->
                             <a class="navbar-brand" href="home.html">
-                                <img src="Images\logo.svg" alt="" width="70" height="65"
+                                <img src="../Images/logo.svg" alt="" width="70" height="65"
                                     class="d-inline-block align-text-top">
 
                             </a>
-
-                            <button class="btn"> Make An Appointment
-                            </button>
+                            <a href="../appointement/app.html">
+                                <button class="btn"> Make An Appointment
+                                </button>
+                            </a>
 
                         </div>
                     </div>
@@ -96,17 +102,17 @@
             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="Images\pexels-photo-305565.webp" class="d-block w-100" alt="...">
+                        <img src="../Images/slider1.jpg" class="d-block w-100 " alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>First slide label</h5>
                             <p>Some representative placeholder content for the first slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
-                        <img src="Images\istockphoto-486561962-612x612ope.jpg" class="d-block w-100" alt="...">
+                        <img src="../Images/slider2.jpg" class="d-block w-100 Active" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="Images\istockphoto-1312706413-612x612.jpg" class="d-block w-100" alt="...">
+                        <img src="../Images/slider3.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
@@ -121,29 +127,67 @@
                 </button>
             </div>
         </div>
+        <div class="card-container">
+            <div class="card" style="width: 22rem;">
+                <div class="card-body">
+                    <h3 class="card-title">Schedule Hours</h3>
+                    <p class="card-text">We're here for you 24*7, ensuring quality healthcare whenever you need it. Your
+                        health is our commitment.
 
 
+
+
+                    </p>
+                    <a href="#" class="btn btn-primary">See Schedule Hours </a>
+                </div>
+            </div>
+
+            <div class="card" style="width: 22rem;">
+                <div class="card-body">
+                    <h3 class="card-title">Our Location</h3>
+                    <p class="card-text">Search our locations to find the one nearest you Get the answers and assurance
+                        you deserve with
+                        accuracy you can trust.</p>
+                    <a href="#" class="btn btn-primary">Get Directions</a>
+                </div>
+            </div>
+
+            <div class="card" style="width: 22rem;">
+                <div class="card-body">
+                    <h3 class="card-title">
+                        Appointments</h3>
+                    <p class="card-text">Emergency Medical Services, more commonly known as EMS, is a system that
+                        responds.</p>
+                    <a href="#" class="btn btn-primary">Get Appointment</a>
+                </div>
+            </div>
+        </div>
+        <!-- 
         <div class="card-container">
             <div class="card1">
-                <h1>Schedule Hours</h3>
-                    <h2> 24 x 7 </h2>
-
+                <div class="container11">
+                <h2>Schedule Hours</h2>
+                    <h3> 24 x 7 </h3>
+                </div>
 
             </div>
 
             <div class="card2">
+                <div class="container11">
 
-                <h3>Our Location</h3>
-                <p>Search our locations to find the one nearest you Get the answers and assurance you deserve with
-                    accuracy you can trust..</p>
+                <h2>Our Location</h2>
+                <h3>Search our locations to find the one nearest you Get the answers and assurance you deserve with
+                    accuracy you can trust..</h3>
+                    </div>
             </div>
 
             <div class="card3">
-                <img src="path-to-image3.jpg" alt="Card Image 3">
-                <h3>Card Title 3</h3>
-                <p>This is some content for card 3.</p>
+
+                <img src="../path-to-image3.jpg" alt="Card Image 3">
+                <h2>Card Title 3</h2>
+                <h3>This is some content for card 3.</h3>
             </div>
-        </div>
+        </div> -->
 
         <!-- Our Services Container -->
         <div class="container3 text-area-heading">
@@ -169,7 +213,7 @@
                     <div class="col-6">
 
                         <!-- Photo -->
-                        <img src="Images\tab-img-01.jpg" alt="Services Photo" class="photo">
+                        <img src="../Images/tab-img-01.jpg" alt="Services Photo" class="photo">
                     </div>
                     <div class="col-6">
 
@@ -227,16 +271,13 @@
             <!-- </div> -->
             <!-- marque tag  -->
 
-
-
         </div>
-
 
         <div class="container">
             <div class="flip-card" onmouseover="showDescription(this)" onmouseout="hideDescription(this)">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="Images\card\card1.jpg" alt="Avatar" style="width:300px;height:300px;">
+                        <img src="../Images/card/card1.jpg" alt="Avatar" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
                         <h1>Health</h1>
@@ -250,7 +291,7 @@
             <div class="flip-card" onmouseover="showDescription(this)" onmouseout="hideDescription(this)">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="Images\card\card2.jpg" alt="Avatar" style="width:300px;height:300px;">
+                        <img src="../Images\card\card2.jpg" alt="Avatar" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
                         <h1>Pharmacy</h1>
@@ -264,7 +305,7 @@
             <div class="flip-card" onmouseover="showDescription(this)" onmouseout="hideDescription(this)">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="Images\card\card3.jpg" alt="Avatar" style="width:300px;height:300px;">
+                        <img src="../Images\card\card3.jpg" alt="Avatar" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
                         <h1>Osteopaths</h1>
@@ -279,7 +320,7 @@
             <div class="flip-card" onmouseover="showDescription(this)" onmouseout="hideDescription(this)">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="Images\card\card4.jpg" alt="Avatar" style="width:300px;height:300px;">
+                        <img src="../Images\card\card4.jpg" alt="Avatar" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
                         <h1>Treatments</h1>
@@ -293,6 +334,93 @@
         </div>
 
     </div>
+
+
+    <!-- appointement form -->
+    <div class="appointment-container">
+        <div class="image-column">
+            <img src="../Images/premium_photo-1673953509975-576678fa6710.avif" alt="Appointment Image"
+                class="appointment-image">
+        </div>
+        <div class="form-column">
+            <form class="appointment-form">
+                <h2>Book an Appointment</h2>
+                <!-- Your form fields go here -->
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" placeholder="Your Name">
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" placeholder="Your Email">
+
+                <label for="date">Date:</label>
+                <input type="date" id="date" name="date">
+
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+    </div>
+
+
+
+
+    <!-- our happy clients -->
+    <section class="home-testimonial">
+        <div class="container-fluid">
+            <div class="row d-flex justify-content-center testimonial-pos">
+                <div class="col-md-12 pt-4 d-flex justify-content-center">
+                    <h3>Testimonials</h3>
+                </div>
+                <div class="col-md-12 d-flex justify-content-center">
+                    <h2>Our happy clients</h2>
+                </div>
+            </div>
+            <section class="home-testimonial-bottom">
+                <div class="container testimonial-inner">
+                    <div class="row d-flex justify-content-center">
+                        <div class="col-md-4 style-3">
+                            <div class="tour-item ">
+                                <div class="tour-desc bg-white">
+                                    <div class="tour-text color-grey-3 text-center">&ldquo;At this School, our mission is to balance a rigorous comprehensive college preparatory curriculum with healthy social and emotional development.&rdquo;</div>
+                                    <div class="d-flex justify-content-center pt-2 pb-2"><img class="tm-people" src="https://images.pexels.com/photos/6625914/pexels-photo-6625914.jpeg" alt=""></div>
+                                    <div class="link-name d-flex justify-content-center">Balbir Kaur</div>
+                                    <div class="link-position d-flex justify-content-center">Student</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 style-3">
+                            <div class="tour-item ">
+                                <div class="tour-desc bg-white">
+                                    <div class="tour-text color-grey-3 text-center">&ldquo;At this School, our mission is to balance a rigorous comprehensive college preparatory curriculum with healthy social and emotional development.&rdquo;</div>
+                                    <div class="d-flex justify-content-center pt-2 pb-2"><img class="tm-people" src="https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""></div>
+                                    <div class="link-name d-flex justify-content-center">Balbir Kaur</div>
+                                    <div class="link-position d-flex justify-content-center">Student</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 style-3">
+                            <div class="tour-item ">
+                                <div class="tour-desc bg-white">
+                                    <div class="tour-text color-grey-3 text-center">&ldquo;At this School, our mission is to balance a rigorous comprehensive college preparatory curriculum with healthy social and emotional development.&rdquo;</div>
+                                    <div class="d-flex justify-content-center pt-2 pb-2"><img class="tm-people" src="https://images.pexels.com/photos/4946604/pexels-photo-4946604.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""></div>
+                                    <div class="link-name d-flex justify-content-center">Balbir Kaur</div>
+                                    <div class="link-position d-flex justify-content-center">Student</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            </section>
+    </section>
+<br>
+&nbsp;
+&nbsp;
+&nbsp;
+&nbsp;
+&nbsp;
+&nbsp;
+&nbsp;
+
+
+
     <!-- footer -->
     <footer class="footer-section">
         <div class="containerfooter">
@@ -332,7 +460,7 @@
                     <div class="col-xl-4 col-lg-4 mb-50">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="home.html"><img src="Images\logo.svg" class="img-fluid" alt="logo"></a>
+                                <a href="home.html"><img src="../Images/logo.svg" class="img-fluid" alt="logo"></a>
                             </div>
                             <div class="footer-text">
                                 <p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit, sed do eiusmod tempor
@@ -408,19 +536,22 @@
             </div>
         </div>
 
-</footer>
-        <!-- footer html Closed -->
+    </footer>
+    <!-- footer html Closed -->
 
-        <!-- Optional JavaScript; choose one of the two! -->
+    <!-- Optional JavaScript; choose one of the two! -->
 
-        <!-- Option 1: Bootstrap Bundle with Popper -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-        <script src="./Javasript/flipcard.js"></script>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="./Javasript/flipcard.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css."></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-        <!-- Option 2: Separate Popper and Bootstrap JS -->
-        <!--
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
