--- a/HTML/home.html
+++ b/HTML/home.html
@@ -10,10 +10,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
-
-
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
 
 
 
@@ -380,8 +377,12 @@
                         <div class="col-md-4 style-3">
                             <div class="tour-item ">
                                 <div class="tour-desc bg-white">
-                                    <div class="tour-text color-grey-3 text-center">&ldquo;At this School, our mission is to balance a rigorous comprehensive college preparatory curriculum with healthy social and emotional development.&rdquo;</div>
-                                    <div class="d-flex justify-content-center pt-2 pb-2"><img class="tm-people" src="https://images.pexels.com/photos/6625914/pexels-photo-6625914.jpeg" alt=""></div>
+                                    <div class="tour-text color-grey-3 text-center">&ldquo;At this School, our mission
+                                        is to balance a rigorous comprehensive college preparatory curriculum with
+                                        healthy social and emotional development.&rdquo;</div>
+                                    <div class="d-flex justify-content-center pt-2 pb-2"><img class="tm-people"
+                                            src="https://images.pexels.com/photos/6625914/pexels-photo-6625914.jpeg"
+                                            alt=""></div>
                                     <div class="link-name d-flex justify-content-center">Balbir Kaur</div>
                                     <div class="link-position d-flex justify-content-center">Student</div>
                                 </div>
@@ -390,8 +391,12 @@
                         <div class="col-md-4 style-3">
                             <div class="tour-item ">
                                 <div class="tour-desc bg-white">
-                                    <div class="tour-text color-grey-3 text-center">&ldquo;At this School, our mission is to balance a rigorous comprehensive college preparatory curriculum with healthy social and emotional development.&rdquo;</div>
-                                    <div class="d-flex justify-content-center pt-2 pb-2"><img class="tm-people" src="https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""></div>
+                                    <div class="tour-text color-grey-3 text-center">&ldquo;At this School, our mission
+                                        is to balance a rigorous comprehensive college preparatory curriculum with
+                                        healthy social and emotional development.&rdquo;</div>
+                                    <div class="d-flex justify-content-center pt-2 pb-2"><img class="tm-people"
+                                            src="https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                                            alt=""></div>
                                     <div class="link-name d-flex justify-content-center">Balbir Kaur</div>
                                     <div class="link-position d-flex justify-content-center">Student</div>
                                 </div>
@@ -400,8 +405,12 @@
                         <div class="col-md-4 style-3">
                             <div class="tour-item ">
                                 <div class="tour-desc bg-white">
-                                    <div class="tour-text color-grey-3 text-center">&ldquo;At this School, our mission is to balance a rigorous comprehensive college preparatory curriculum with healthy social and emotional development.&rdquo;</div>
-                                    <div class="d-flex justify-content-center pt-2 pb-2"><img class="tm-people" src="https://images.pexels.com/photos/4946604/pexels-photo-4946604.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""></div>
+                                    <div class="tour-text color-grey-3 text-center">&ldquo;At this School, our mission
+                                        is to balance a rigorous comprehensive college preparatory curriculum with
+                                        healthy social and emotional development.&rdquo;</div>
+                                    <div class="d-flex justify-content-center pt-2 pb-2"><img class="tm-people"
+                                            src="https://images.pexels.com/photos/4946604/pexels-photo-4946604.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                                            alt=""></div>
                                     <div class="link-name d-flex justify-content-center">Balbir Kaur</div>
                                     <div class="link-position d-flex justify-content-center">Student</div>
                                 </div>
@@ -410,14 +419,14 @@
                     </div>
             </section>
     </section>
-<br>
-&nbsp;
-&nbsp;
-&nbsp;
-&nbsp;
-&nbsp;
-&nbsp;
-&nbsp;
+    <br>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
 
 
 
