--- a/HTML/home.html
+++ b/HTML/home.html
@@ -46,7 +46,7 @@
                                     <a class="nav-link active" aria-current="page" href="home.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">About Us</a>
+                                    <a class="nav-link" href="../About/ENT Project about/ENT Project about/ENT-Clinic/src/HTML/About.html">About Us</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -54,20 +54,20 @@
                                         Services
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <li><a class="dropdown-item" href="./ear.html">Ear</a></li>
-                                        <li><a class="dropdown-item" href="#">Nose</a></li>
-                                        <li><a class="dropdown-item" href="#">Throat</a></li>
+                                        <li><a class="dropdown-item" href="../Services/ENT-Clinic-ENT_SERVICES/ENT-Clinic-ENT_SERVICES/src/html/ear.html">Ear</a></li>
+                                        <li><a class="dropdown-item" href="../Services/ENT-Clinic-ENT_SERVICES/ENT-Clinic-ENT_SERVICES/src/html/nose.html">Nose</a></li>
+                                        <li><a class="dropdown-item" href="../Services/ENT-Clinic-ENT_SERVICES/ENT-Clinic-ENT_SERVICES/src/html/Throat.html">Throat</a></li>
                                         <li>
                                             <hr class="dropdown-divider">
                                         </li>
-                                        <li><a class="dropdown-item" href="#">More about ERT healthcare</a></li>
+                                        <li><a class="dropdown-item" href="../Services/ENT Project service/ENT Project service/ENT-Clinic/src/HTML/Services.html">More about ERT healthcare</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Blog</a>
+                                    <a class="nav-link" href="../blog and contact/Ent/ENT-Clinic/src/html/Blog.html">Blog</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Contact Us</a>
+                                    <a class="nav-link" href="../blog and contact/Ent/ENT-Clinic/src/html/Contact.html">Contact Us</a>
                                 </li>
                             </ul>
 
@@ -82,7 +82,7 @@
                                     class="d-inline-block align-text-top">
 
                             </a>
-                            <a href="../appointement/app.html">
+                            <a href="../Appointment/ENT-Clinic-ENT_appointement/src/html/app.html">
                                 <button class="btn"> Make An Appointment
                                 </button>
                             </a>
@@ -469,7 +469,7 @@
                     <div class="col-xl-4 col-lg-4 mb-50">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="home.html"><img src="../Images/logo.svg" class="img-fluid" alt="logo"></a>
+                                <a href="/HTML/home.html"><img src="../Images/logo.svg" class="img-fluid" alt="logo"></a>
                             </div>
                             <div class="footer-text">
                                 <p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit, sed do eiusmod tempor
@@ -490,16 +490,16 @@
                                 <h3>Useful Links</h3>
                             </div>
                             <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">about</a></li>
-                                <li><a href="#">services</a></li>
+                                <li><a href="/HTML/home.html">Home</a></li>
+                                <li><a href="/About/ENT Project about/ENT Project about/ENT-Clinic/src/HTML/About.html">about</a></li>
+                                <li><a href="/Services/ENT Project service/ENT Project service/ENT-Clinic/src/HTML/Services.html">services</a></li>
                                 <li><a href="#">portfolio</a></li>
-                                <li><a href="#">Contact</a></li>
-                                <li><a href="#">About us</a></li>
-                                <li><a href="#">Our Services</a></li>
+                                <li><a href="/blog and contact/Ent/ENT-Clinic/src/html/Contact.html">Contact</a></li>
+                                <li><a href="/About/ENT Project about/ENT Project about/ENT-Clinic/src/HTML/About.html">About us</a></li>
+                                <li><a href="/Services/ENT Project service/ENT Project service/ENT-Clinic/src/HTML/Services.html">Our Services</a></li>
                                 <li><a href="#">Expert Team</a></li>
-                                <li><a href="#">Contact us</a></li>
-                                <li><a href="#">Latest News</a></li>
+                                <li><a href="/blog and contact/Ent/ENT-Clinic/src/html/Contact.html">Contact us</a></li>
+                                <li><a href="/blog and contact/Ent/ENT-Clinic/src/html/Blog.html">Latest News</a></li>
                             </ul>
                         </div>
                     </div>
@@ -533,11 +533,11 @@
                     <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
                         <div class="footer-menu">
                             <ul>
-                                <li><a href="#">Home</a></li>
+                                <li><a href="/HTML/home.html">Home</a></li>
                                 <li><a href="#">Terms</a></li>
                                 <li><a href="#">Privacy</a></li>
                                 <li><a href="#">Policy</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="/blog and contact/Ent/ENT-Clinic/src/html/Contact.html">Contact</a></li>
                             </ul>
                         </div>
                     </div>
